--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -9,19 +9,32 @@
   </header>
 
   <main>
-    <div class="jumbotron">
-      <h1>Talia Swartz</h1>
-      <p>Welcome to my personal website, please send all donations in units of $100 to my Venmo - @talia-swartz</p>
-      <p><a class="btn btn-primary btn-lg" href="https://github.com/zsobin/PersonalWebApp" target="_blank" role="button">See the repo</a></p>
-    </div>
-    <div class="tina-gif">
-      <iframe src="https://media.giphy.com/media/3ohzdG81Z0pAs3ExY4/giphy.gif" width="480" height="450" frameBorder="0"  allowFullScreen></iframe>
-      <p>
-        <a href="https://giphy.com/gifs/3ohzdG81Z0pAs3ExY4">
-          via GIPHY
-        </a>
-      </p>
-    </div>
+    <section class="sec1">
+      <div class="box1">
+      <div class="menu">
+        <h1 id="kr"><a href="#top">무니도예</a></h1>
+        <h1 id="en"><b>muny</b><br/>pottery studio</h1>
+        <ul class="fa-ul">
+          <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">home</a></li>
+          <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">class</a><li>
+          <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">membership</a></li>
+          <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">contact</a></li>
+        </ul>
+      </div>
+      <div class="home">
+        <h1 id="greeting"></h1>
+          <h1 id="en">Welcome to MUNY Studio :)<br/>Muddy hands make beautiful art <i class="fa fa-heart" id="heart" aria-hidden="true"></i><br/>enjoy getting dirty with us !</h1>
+          <h1></h1>
+      </div>
+      </div>
+    </section>
+  
+    <section class="copyright">
+      <div id="cr">
+        <p>Copyright &copy; 2019 Muny Pottery Studio. All rights reserved.</p>
+      </div>
+      <script src="js.js"></script>
+    </section>
   </main>
 
 </body>
