--- a/project/html/helpers/head.ejs
+++ b/project/html/helpers/head.ejs
@@ -11,11 +11,15 @@
 <!-- this app's own css -->
 <link rel="stylesheet" type="text/css" href="/css/main.css"/>
 
+<link href="https://fonts.googleapis.com/css?family=Kirang+Haerang|Roboto+Slab" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Roboto" rel="stylesheet">
+<link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet">
+    
 
 <!-- Next import js files -->
 <!-- jquery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<!-- then bootstrap -->
+then bootstrap
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 
