--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -4,9 +4,9 @@
 </head>
 <body class="container">
 
-  <header>
+  <!--<header>
     <% include ../helpers/navbar %>
-  </header>
+  </header>-->
 
   <main>
     <section class="sec1">
