--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -9,32 +9,54 @@
   </header>-->
 
   <main>
-    <section class="sec1">
-      <div class="box1">
-      <div class="menu">
-        <h1 id="kr"><a href="#top">무니도예</a></h1>
-        <h1 id="en"><b>muny</b><br/>pottery studio</h1>
-        <ul class="fa-ul">
-          <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">home</a></li>
-          <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">class</a><li>
-          <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">membership</a></li>
-          <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">contact</a></li>
-        </ul>
-      </div>
-      <div class="home">
-        <h1 id="greeting"></h1>
-          <h1 id="en">Welcome to MUNY Studio :)<br/>Muddy hands make beautiful art <i class="fa fa-heart" id="heart" aria-hidden="true"></i><br/>enjoy getting dirty with us !</h1>
-          <h1></h1>
-      </div>
-      </div>
-    </section>
-  
-    <section class="copyright">
-      <div id="cr">
-        <p>Copyright &copy; 2019 Muny Pottery Studio. All rights reserved.</p>
-      </div>
-      <script src="js.js"></script>
-    </section>
+      <section class="sec1">
+          <div class="box1">
+          <div class="menu">
+            <h1><a href="#top">muny</a></h1>
+            <h1>pottery studio</h1>
+            <ul class="fa-ul">
+              <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">home</a></li>
+              <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">class</a><li>
+              <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">membership</a></li>
+              <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">contact</a></li>
+            </ul>
+      
+          </div>
+          <div class="home">
+            <div class="box1-1">
+              <h1>&bull; muny pottery studio &bull;</h1>
+              <!--<h1 id="greeting"></h1>
+              <h1 id="en">Welcome to MUNY Studio :)<br/>
+              Muddy hands make beautiful art 
+              <i class="fa fa-heart" id="heart" aria-hidden="true">
+              </i><br/>enjoy getting dirty with us !</h1>-->
+            </div>
+            <div class ="box1-3">	
+              <img class="img" id="topleft" src="images/1.jpeg" alt="">
+              <img class="color" src="images/b2ab99.png" alt="">
+              <img class="img" src="images/9.jpeg" alt="">
+              <img class="img" src="images/4.jpeg" alt="">
+              <img class="color" id ="topright"src="images/c4bdb7.png" alt="">
+              <img class="img" src="images/6.jpeg" alt="">
+              <img class="img" src="images/7.jpg" alt="">
+              <img class="color" src="images/958b81.png" alt="">
+              <img class="img" src="images/3.jpeg" alt="">
+              <img class="img" src="images/10.jpeg" alt="">
+              <img class="color" id="bottomleft" src="images/c6bfaf.png" alt="">
+              <img class="img" src="images/5.jpeg" alt="">
+              <img class="color" src="images/a89074.png" alt="">
+              <img class="color" src="images/b4b4ac.png" alt="">
+              <img class="img" id="bottomright" src="images/8.jpeg" alt="">
+          </div>
+        </div>
+        </div>
+        </section>
+        <section class="copyright">
+          <div id="cr">
+            <p>Copyright &copy; 2019 Muny Pottery Studio. All rights reserved.</p>
+          </div>
+          <script src="js.js"></script>
+        </section>
   </main>
 
 </body>
