--- a/project/html/helpers/head.ejs
+++ b/project/html/helpers/head.ejs
@@ -7,8 +7,8 @@
 <!-- this app's own css -->
 <link rel="stylesheet" type="text/css" href="/css/main.css"/>
 
-<link href="https://fonts.googleapis.com/css?family=Kirang+Haerang|Roboto+Slab" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Roboto" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911|Reenie+Beanie|Sacramento" rel="stylesheet">
+
 <link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet">
     
 
