--- a/project/css/main.css
+++ b/project/css/main.css
@@ -192,11 +192,12 @@ and fourth value applies to bottom-left corner):*/
 .copyright {
 	width: 100%;
 	height: auto;
-	background: #;
+	background: #beaa97;
 	padding: 0;
 	margin: 0;
 	color: white;
 }
+
 #cr {
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
