--- a/project/html/pages/contact.ejs
+++ b/project/html/pages/contact.ejs
@@ -9,20 +9,45 @@
   </header>
 
   <main class="contact-container">
-    <div class="page-header">
-      <h1>Be my friend?</h1>
-    </div>
-    <div class="content">
-      <a class="contact-icon-link" href="https://www.linkedin.com/in/talia-swartz-09a90675/" target="_blank">
-         <i class="contact-icon fa fa-linkedin-square"></i>
-      </a>
-      <a class="contact-icon-link" href="https://github.com/tswartz" target="_blank">
-        <i class="contact-icon fa fa-github-square"></i>
-      </a>
-      <a class="contact-icon-link" href="https://www.facebook.com/talia.swartz.1" target="_blank">
-        <i class="contact-icon fa fa-facebook-square"></i>
-      </a>
-    </div>
+      <div class="page-header">
+          <h1>Stream</h1>
+        </div>
+      
+        <button id="login-button" class="btn btn-default" type="button" onclick="toggleSignIn()">
+          Sign in to view stream
+        </button>
+      
+        <section id="add-post">
+          <h2 class="mdl-card__title-text">
+            New Post
+          </h2>
+      
+          <form id="message-form" action="#">
+            <div class="form-group">
+              <label for="new-post-title">
+                Post title...
+              </label>
+              <input type="text" id="new-post-title">
+            </div>
+      
+            <div class="form-group">
+              <label for="new-post-body">
+                Post message...
+              </label>
+              <textarea rows="3" id="new-post-body"></textarea>
+            </div>
+      
+            <button type="submit" class="btn btn-default" onclick="handleMessageFormSubmit()">
+              Add post
+            </button>
+          </form>
+        </section>
+      
+        <div id="stream">
+          Stream goes here:
+        </div>
   </main>
+
+  
 </body>
 </html>
