--- a/project/html/helpers/head.ejs
+++ b/project/html/helpers/head.ejs
@@ -27,11 +27,11 @@
   // Initialize Firebase
   var config = {
     apiKey: '<%= process.env.API_KEY %>',
-    authDomain: "muny-studio-d81e2.firebaseapp.com",
-    databaseURL: "https://muny-studio-d81e2.firebaseio.com",
-    projectId: "muny-studio-d81e2",
-    storageBucket: "muny-studio-d81e2.appspot.com",
-    messagingSenderId: "497870777649"
+    authDomain: "database-30dcf.firebaseapp.com",
+    databaseURL: "https://database-30dcf.firebaseio.com",
+    projectId: "database-30dcf",
+    storageBucket: "database-30dcf.appspot.com",
+    messagingSenderId: "7555310310"
   };
   firebase.initializeApp(config);
 </script>
