--- a/project/html/pages/classregisteration.ejs
+++ b/project/html/pages/classregisteration.ejs
@@ -19,16 +19,18 @@
               </i><br/>enjoy getting dirty with us !</h1>-->
             </div>
             <div class ="box1-3">	
-                <h1>coming soon !</h1>
+              <h1>class registeration</h1>
+              <h2 id="registerclass">hi</h2>
           </div>
         </div>
         </div>
+        <script src="js/classregisteration.js"></script>
+        <!--<script src="js/classregisteration.js"></script>-->
         </section>
         <section class="copyright">
           <div id="cr">
             <p>Copyright &copy; 2019 Muny Pottery Studio. All rights reserved.</p>
           </div>
-          <script src="js.js"></script>
         </section>
   </main>
 
