--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -3,24 +3,11 @@
     <% include ../helpers/head %>
 </head>
 <body class="container">
-
-  <header>
-    <% include ../helpers/navbar %>
-  </header>
-
   <main>
       <section class="sec1">
           <div class="box1">
           <div class="menu">
-            <h1><a href="#top">muny</a></h1>
-            <h1>pottery studio</h1>
-            <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">home</a></li>
-              <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">class</a><li>
-              <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">membership</a></li>
-              <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="">contact</a></li>
-            </ul>
-      
+            <% include ../helpers/menu %>
           </div>
           <div class="home">
             <div class="box1-1">
