--- a/project/html/pages/contact.ejs
+++ b/project/html/pages/contact.ejs
@@ -1,53 +1,71 @@
 <html lang="en">
 <head>
-  <% include ../helpers/head %>
+    <% include ../helpers/head %>
 </head>
 <body class="container">
-
-  <header>
-    <% include ../helpers/navbar %>
-  </header>
-
-  <main class="contact-container">
-      <div class="page-header">
-          <h1>Stream</h1>
+  <main>
+      <section class="sec1">
+          <div class="box1">
+          <div class="menu">
+            <% include ../helpers/menu %>
+          </div>
+          <div class="home">
+            <div class="box1-1">
+              <h1>&bull; muny pottery studio &bull;</h1>
+              <!--<h1 id="greeting"></h1>
+              <h1 id="en">Welcome to MUNY Studio :)<br/>
+              Muddy hands make beautiful art 
+              <i class="fa fa-heart" id="heart" aria-hidden="true">
+              <br/>enjoy getting dirty with us !</h1>-->
+            </div>
+            <div class ="box1-3">
+              <h1>comming soon !</h1>
+                  <!--<button id="login-button" class="btn btn-default" type="button" onclick="toggleSignIn()">
+                    Sign in to view stream
+                  </button>
+                
+                  <section id="add-post">
+                    <h2 class="mdl-card__title-text">
+                      New Post
+                    </h2>
+                
+                    <form id="message-form" action="#">
+                      <div class="form-group">
+                        <label for="new-post-title">
+                          Post title...
+                        </label>
+                        <input type="text" id="new-post-title">
+                      </div>
+                
+                      <div class="form-group">
+                        <label for="new-post-body">
+                          Post message...
+                        </label>
+                        <textarea rows="3" id="new-post-body"></textarea>
+                      </div>
+                
+                      <button type="submit" class="btn btn-default" onclick="handleMessageFormSubmit()">
+                        Add post
+                      </button>
+                    </form>
+                  </section>
+                
+                  <div>
+                    Stream goes here:
+                    <h2>Account</h2><h2 id="account"></h2>
+                    <h2 id="stream">Comment</h2>
+                  </div>
+          </div>-->
         </div>
-      
-        <button id="login-button" class="btn btn-default" type="button" onclick="toggleSignIn()">
-          Sign in to view stream
-        </button>
-      
-        <section id="add-post">
-          <h2 class="mdl-card__title-text">
-            New Post
-          </h2>
-      
-          <form id="message-form" action="#">
-            <div class="form-group">
-              <label for="new-post-title">
-                Post title...
-              </label>
-              <input type="text" id="new-post-title">
-            </div>
-      
-            <div class="form-group">
-              <label for="new-post-body">
-                Post message...
-              </label>
-              <textarea rows="3" id="new-post-body"></textarea>
-            </div>
-      
-            <button type="submit" class="btn btn-default" onclick="handleMessageFormSubmit()">
-              Add post
-            </button>
-          </form>
+        </div>
         </section>
-      
-        <div id="stream">
-          Stream goes here:
-        </div>
+        <section class="copyright">
+          <div id="cr">
+            <p>Copyright &copy; 2019 Muny Pottery Studio. All rights reserved.</p>
+          </div>
+          <script src="js.js"></script>
+        </section>
   </main>
 
-  
 </body>
 </html>
