--- a/project/html/pages/membership.ejs
+++ b/project/html/pages/membership.ejs
@@ -27,7 +27,7 @@
 
                 <label for="username" id="username">Create Username</label>
                 <input type="text" id="usernameinput"/>
-                <div id="feedback">
+                <div id="warning">
                 </div>
 
                 <label for="password" id="password">Create Password</label>
