--- a/project/css/membership.css
+++ b/project/css/membership.css
@@ -29,6 +29,7 @@ input[type='text'], input[type='password'], textarea {
     border: 2px dotted #d4bfaa;
     border-radius: 8px;
     margin: 5px;
+    color: #534b46;
 }
 
 input[type='submit'], button {
@@ -41,10 +42,22 @@ input[type='submit'], button {
     padding: 10px;
     color: #534b46;
 }
-input:focus {
+input:focus, textarea:focus {
     outline: none;
     background-color: #fff;
+    color: #534b46;
 }
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #d4bfaa;
+  opacity: 1; /* Firefox */
+}
+
+#email {
+    height: 300px;
+}
+
+
 
 button:focus {
     outline: none;
