--- a/project/css/main.css
+++ b/project/css/main.css
@@ -28,7 +28,10 @@ body {
 	background-size: 100% 50%;
 	background-position: center top, center bottom;
 	background-repeat: no-repeat;*/
-	
+	min-width: 1000px;
+	max-width: 100%;
+	margin: 0 auto;
+
 }
 
 h1 {
@@ -56,6 +59,15 @@ a {
 
 button {
 	color: #534b46;
+}
+
+::-moz-selection {
+   background-color: white;
+   color: #8c7963;
+}
+::selection {
+    background-color: white;
+    color: #8c7963;
 }
 
 /* ----------------------------------- sec1 -----------------------------------  */
@@ -200,6 +212,7 @@ button:hover {
 }
 
 
+
 /* ----------------------------------- copyright -----------------------------------  */
 .copyright {
 	width: 100%;
@@ -236,6 +249,7 @@ button:hover {
 
 /* ----------------------------------- 1000px -----------------------------------  */
 @media (min-width: 1000px) {
+
 
 
 }
