--- a/project/html/helpers/menu.ejs
+++ b/project/html/helpers/menu.ejs
@@ -5,6 +5,7 @@
         <li><a href="/about">about</a></li>
         <li><a href="/class">class</a><li>
         <li><a href="/membership">membership</a></li>
+        <li><a href="/direction">direction</a></li>
         <li><a href="/contact">contact</a></li>
     </ul>
     <!--<ul class="fa-ul">
@@ -12,5 +13,6 @@
             <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="/about">about</a></li>
             <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="/class">class</a><li>
             <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="/membership">membership</a></li>
+            <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="/findus">find us</a></li>
             <li><span class="fa-li"><i class="fas fa-plus" id="plus"></i></span><a href="/contact">contact</a></li>
         </ul>-->
