--- a/project/html/pages/contact.ejs
+++ b/project/html/pages/contact.ejs
@@ -20,7 +20,7 @@
               <br/>enjoy getting dirty with us !</h1>-->
             </div>
             <div class ="box1-3">
-              <h1>contact us for answers to all of your questions!</h1>
+              <h1>contact us for answers to all of your questions :)</h1>
               <br/><br/>
               <form id="javascript_form">
                 <input type="text" name="subject" placeholder="Subject" />
