--- a/project/html/pages/direction.ejs
+++ b/project/html/pages/direction.ejs
@@ -19,12 +19,10 @@
               </i><br/>enjoy getting dirty with us !</h1>-->
             </div>
             <div class ="box1-3">	
-              <h1>class registeration</h1>
-              <h2 id="registerclass">hi</h2>
+              <h1>coming soon!</h1>
           </div>
         </div>
         </div>
-        <script src="js/classregisteration.js"></script>
         <!--<script src="js/classregisteration.js"></script>-->
         </section>
         <section class="copyright">
