--- a/project/html/pages/about.ejs
+++ b/project/html/pages/about.ejs
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <% include ../helpers/head %>
+    <link rel="stylesheet" href="css/about.css">
 </head>
 <body class="container">
   <main>
@@ -18,8 +19,9 @@
               <i class="fa fa-heart" id="heart" aria-hidden="true">
               </i><br/>enjoy getting dirty with us !</h1>-->
             </div>
-            <div class ="box1-3">	
-                <h1>coming soon !</h1>
+            <div class ="box1-3">
+              <div class="artist"><img src="images/munhee_clear.png" alt=""></div>
+              <p>Munhee Kwon is an artist based in Busan, South Korea</p>
           </div>
         </div>
         </div>
