--- a/project/html/pages/membership.ejs
+++ b/project/html/pages/membership.ejs
@@ -20,8 +20,9 @@
               <i class="fa fa-heart" id="heart" aria-hidden="true">
               <br/>enjoy getting dirty with us !</h1>-->
             </div>
-            <div class ="box1-3">
-              
+            <div id="click"></div>
+            <div class ="box1-3" id="click">
+              <script src="js/click.js"></script>
               <h1 id="title">become a member and join our clay community !</h1>
               <form method="post" id="signup" action="https://munystudio.herokuapp.com">
 
