--- a/project/html/helpers/head.ejs
+++ b/project/html/helpers/head.ejs
@@ -1,5 +1,5 @@
 <meta charset="UTF-8">
-<title>MUNY Studio</title>
+<title>muny studio</title>
 
 <!-- font awesome css -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
