--- a/project/html/pages/direction.ejs
+++ b/project/html/pages/direction.ejs
@@ -7,7 +7,7 @@
         height: 350px;
         margin: 0;
         padding: 0;
-        float: center;
+        float: left;
         border-radius: 25px;
         border: 3px dotted #d4bfaa;
       }
