--- a/project/html/pages/direction.ejs
+++ b/project/html/pages/direction.ejs
@@ -52,7 +52,10 @@
                 <br/>&plus;8210&ndash;5610&ndash;1754</p>
               </div>
               <div id="box1-3-2">
-                  <div id="map"></div>
+                  <div id="map">
+                      <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= process.env.Google_Map %>&callback=initMap"
+                      type="text/javascript"></script>
+                  </div>
               </div>
               <script>
                 var CustomMapStyles = [
