google map update

--- a/project/html/pages/direction.ejs
+++ b/project/html/pages/direction.ejs
@@ -53,6 +53,7 @@
               </div>
               <div id="box1-3-2">
                   <div id="map">
+                    <h1>google Map is currently being updated</h1>
                       <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= process.env.Google_Map %>&callback=initMap"
                       type="text/javascript"></script>
                   </div>
