--- a/project/html/pages/direction.ejs
+++ b/project/html/pages/direction.ejs
@@ -53,7 +53,12 @@
               </div>
               <div id="box1-3-2">
                   <div id="map">
-                    <h1>google Map is currently being updated</h1>
+                    <h1>google map is currently being updated</h1>
+                    <style>
+                      #map h1 {
+                        padding-top: 150px;
+                      }
+                    </style>
                       <script async defer src="https://maps.googleapis.com/maps/api/js?key=<%= process.env.Google_Map %>&callback=initMap"
                       type="text/javascript"></script>
                   </div>
